Add more tests to item stack class with fixes to those tests (#1058)
* Add tests to set type method in item stack

* Fix invalid test for ItemStack#setType: wrong class names defined for item meta

* Fix item meta not updating whenever the type is set

* Fixes on item stack tests, simplifications on logic and fix for file

* Fix test not finding interface class when comparing to expected meta

* Optimisation of otherwise redundant check

* Default to AIR if material is not an item

* Fix generated data

* Skip meta that is not implemented

* Fix cloning for bundle meta mock and item stacks

* Fix cloning of item stacks in crossbow meta mock

* Fix crossbow meta cloning

* Fix null pointer exception

* Add equals test for item meta

* Fix null pointer exception (assumes class is mock instance though)

* Invoke "trivial" methods on each item meta class to change internal values

* Add hashing algorithm to item stack mock

* Add more tests

* Add more tests to item stack

* Add more test on item stack according to tested paper behavior

* add durability and lore into equality when comparing item stacks

* Fix failures from itemstack mock changes

* Adds a fix for #1111

* Add serialization for ominous bottle

* Add enchanments to the hash

* Fix test failures for applying invalid enchantment

* Use constant instead of string literal for key "amplifier"